--- a/src/container/BlogPost/Blogpost.css
+++ b/src/container/BlogPost/Blogpost.css
@@ -45,3 +45,17 @@
   font-size: 16px;
   color: rgb(0, 0, 36);
 }
+
+.remove {
+  padding: 12px 10px;
+  background-color: rgb(255, 38, 38);
+  color: white;
+  border: none;
+  margin-top: 20px;
+  border-radius: 4px;
+  outline: none;
+}
+
+.remove:hover {
+  cursor: pointer;
+}
