--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
-.App {
-  padding: 50px;
+.navbar {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #445;
+}
+
+.navbar ul {
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar li {
+  list-style: none;
+  margin-right: 20px;
+}
+
+.navbar li a {
+  color: white;
+  text-decoration: none;
 }
